# test

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md
data/: cluster1000.csv  cluster250.csv  cluster500.csv  cluster5000.csv  solar100.csv  solar200.csv  solar300.csv
scripts/: run-riscv.sh
src/: body.cpp  body.h  camera.cpp  camera.h  compute_step.s  dvec3.cpp  dvec3.h  engine.cpp  engine.h  main.cpp  nbody_riscv.cpp  octree.cpp  octree.h  simulation.cpp  simulation.h
src/utils/: logger.cpp  logger.h
